--- a/coding-responsive-rogue-pickings-01-starter-code/css/main.css
+++ b/coding-responsive-rogue-pickings-01-starter-code/css/main.css
@@ -1,4 +1,8 @@
 /******** GLOBAL STYLES ********/
+html{
+	font-size: 16px;
+}
+
 body {
 	font-family: 'Montserrat', Helvetica, Arial, sans-serif;
 	font-size: .9em;
@@ -12,10 +16,6 @@ body {
 	display:flex;
 	justify-content: center;
 	flex-flow: row wrap;
-}
-
-html{
-	font-size: 16px;
 }
 
 h1,
@@ -62,6 +62,7 @@ header h1 {
 	padding: 38px 0 20px 0;
 	width:100%;
 	border-bottom: 3px solid #77A466;
+	
 }
 
 header h1 span {
@@ -76,11 +77,12 @@ header nav {
 header nav ul {
 	margin: 0;
 	padding: 0;
+	list-style: none;
 }
 
 header nav ul li {
 	
-	font-size: .87em;
+	font-size: .875em;
 	font-weight: 700;
 	text-transform: uppercase;
 	padding: 10px 0;
@@ -99,6 +101,7 @@ header nav ul li a {
 	width: 100%;
 	border-top: 3px solid #77A466;
 	border-bottom: 3px solid #77a466;
+	
 }
 
 
@@ -124,8 +127,6 @@ header nav ul li a {
 .section-two,
 .section-three {
 	box-sizing: border-box;
-	float: left;
-	padding: 0 40px;
 }
 
 .section-one {
@@ -171,4 +172,66 @@ footer span {
 	text-transform: lowercase;
 	color: #45610E;
 	font-size: .875em;
+}
+
+/****tablet****/
+
+@media all and (min-width:768px) {
+
+
+.bottom-section .content-wrapper {
+	border-top: 5px solid #EEE;
+	border-bottom: 5px solid #EEE;
+	justify-content: space-evenly;
+		
+}
+	
+.section-one {
+	width: 26%;/**29**/
+
+}
+
+.section-two {
+	width: 40%;/***42***/
+	border-left: 5px solid #EEE;
+	border-right: 5px solid #EEE;
+	border-top: none;
+	border-bottom: none;
+	padding: 0 30px;
+}
+
+.section-three {
+	width: 26%;/**29**/
+}
+
+/*****desktop****/
+}
+@media all and (min-width:1200px){
+
+body{
+	font-size:1em;
+}
+
+header .content-wrapper{
+	justify-content:space-between;
+	align-items: center;
+	padding: 20px 0;
+}
+
+header h1{
+	width: 40%;
+	padding-left:5%;
+	border-bottom: none;
+	text-align: left;
+}
+
+header nav{
+	width:21%
+}
+
+header nav ul{
+	
+	display: flex;
+	justify-content: space-between;
+
 }
